<resources>
    <string name="app_name">EnglishHelper</string>
    <string name="first_enter_activity_tv1">Выбери свой класс:</string>
    <string name="first_enter_activity_tv2">Какая оценка у тебя была в прошлой четверти по англу?</string>
    <string name="settings_activity__tv1">Настройки</string>
    <string name="grade_postfix">класс</string>
    <string name="settings_activity__selected_lang_tv">Язык интерфейса:</string>
    <string name="settings_activity__auto_volume_tv">Автоматическая озвучка слов:</string>
    <string name="settings_activity__selected_grade_tv">Выбранный класс:</string>
    <string name="section_activity__word_list_tv">Список слов</string>
    <string name="section_activity__learning_mode_tv">Режим заучивания</string>
    <string name="section_activity__test_tv">Тест</string>
    <string name="section_activity__number_of_words__tv">Всего слов:</string>
    <string name="test_fragment_et__hint">Введите перевод слова</string>

    <string name="result_activity__perf_res_descripit">Поздравляю!!! \nТак держать)</string>
    <string name="result_activity__good_res_descripit">Ты молодец :3</string>
    <string name="result_activity__normal_res_descripit">Неплохо \nНо ты можешь лучше \nЯ в тебя верю</string>
    <string name="result_activity__bad_res_descripit">Попробуй еще раз!</string>


    <string name="result_dialog__message1">Продолжить прошлую попытку?</string>
    <string name="result_dialog__negative_text1">Начать сначала</string>
    <string name="result_dialog__positive_text1">Да</string>

    <string name="result_dialog__message2">Поздравляем! \nВы выучили все вслова</string>
    <string name="result_dialog__negative_text2">Отменить</string>
    <string name="result_dialog__positive_text2">Перейти к тесту</string>
    <string name="result_activity__result__tv">Ваш результат:</string>
    <string name="result_activity__try_again_btn">Попробовать еще</string>
    <string name="result_activity__view_mistakes__btn">Посмотреть ошибки</string>


</resources>
